--- a/MRM/Views/Shared/_Layout.cshtml
+++ b/MRM/Views/Shared/_Layout.cshtml
@@ -55,17 +55,18 @@
 </body>
 </html>
 <script type="text/javascript">
-    $(document).ajaxStart(function() {
+    $(document).ajaxStart(function () {
         $("<div id='globalLoader' style='width: 200px; height: 400px;'><div class='loader'></div></div>")
             .dialog({ height: 400, width: 400, modal: true, dialogClass: 'dialogbg' }).show();
         $(".ui-dialog-titlebar").hide();
     });
 
-    $(document).ajaxComplete(function() {
+    $(document).ajaxComplete(function () {
         customCode();
+        BindDatePickerCalender();
     });
 
-    var customCode = function() {
+    var customCode = function () {
         var config = {
             '.chosen-select': {},
             '.chosen-select-deselect': { allow_single_deselect: true },
@@ -83,7 +84,7 @@
         GetBGandSegmentSingleDDl();
     };
 
-    $(document).ready(function() {
+    $(document).ready(function () {
         //$.fn.ajaxMRM = function (options) {
         //    var settingsmrm = $.extend(true, {}, options,{
         //        success: function (data) {
@@ -116,13 +117,13 @@
                 $('#Industries_Id').text('');
                 return false;
             } else {
-                
+
                 $('.validmsgbusinesIndustry').hide();
             }
 
         });
 
-    
+
         commonUiInitialization();
         GetBGandSegmentSingleDDl();
 
@@ -134,11 +135,10 @@
         BindDatePickerCalender();
     });
 
-    function BindDatePickerCalender() {
-        $(".end-date-cal").prop('disabled', true);
+    function BindDatePickerCalender() {     
         $(".start-date-cal").datepicker({
             dateFormat: 'dd/mm/yy',
-            onSelect: function (selected) {
+            onSelect: function (selected) {               
                 $(".end-date-cal").datepicker("option", "minDate", selected)
                 $(".end-date-cal").prop('disabled', false);
             }
@@ -146,6 +146,10 @@
         $(".end-date-cal").datepicker({
             dateFormat: 'dd/mm/yy'
         });
+
+        if ($(".start-date-cal").val() == '') {
+            $(".end-date-cal").prop('disabled', true);
+        }
     }
 
     function GetBGandSegmentSingleDDl() {
@@ -231,7 +235,7 @@
         }
     }
 
- </script>
+</script>
 
 <script src="~/Content/Multi-Select/chosen.jquery.js" type="text/javascript"></script>
 <script src="~/Content/Multi-Select/docsupport/init.js"></script>
