compare date change

--- a/MRM/Views/Shared/_Layout.cshtml
+++ b/MRM/Views/Shared/_Layout.cshtml
@@ -152,6 +152,17 @@
         if ($(".start-date-cal").val() == '') {
             $(".end-date-cal").prop('disabled', true);
         }
+
+        if ($('#MCStartDate').val() != '' && $('#MCEndDate').val() != '') {
+            $('.start-date-cal').datepicker('option', {
+                minDate: new Date($('#MCStartDate').val()),
+                maxDate: new Date($('#MCEndDate').val())
+            });
+            $('.end-date-cal').datepicker('option', {
+                minDate: new Date($('#MCStartDate').val()),
+                maxDate: new Date($('#MCEndDate').val())
+            });
+        }
     }
 
     function GetBGandSegmentSingleDDl() {
