Working on UI changes

--- a/MRM/Views/MasterCampaign/MasterCampaignForm.cshtml
+++ b/MRM/Views/MasterCampaign/MasterCampaignForm.cshtml
@@ -23,8 +23,10 @@
 
                 <fieldset>
 
-                    <legend class="header-color">Master Campaign<span class="text-danger" style="float:right;font-size:x-small">Note: Mandatory fields is marked with red aestric (*)</span></legend>
-
+                    <legend class="header-color">Master Campaign
+                        @*<span class="text-danger" style="float:right;font-size:x-small">Note: Mandatory fields is marked with red aestric (*)</span>*@
+                    </legend>
+                    <div class="legend2 text-danger">Note: Mandatory fields is marked with red aestric (*)</div>
                     <div class="row">
                         <div class="col-md-6">
                             <div class="form-group">
@@ -134,7 +136,7 @@
 
                     <div class="row">
                         <div class="col-md-6">
-                            <label>Start Date<span class="text-danger lb-sm">(DD/MM/YYYY)*</span></label>
+                            <label>Start Date<span class="text-danger lb-sm"> (DD/MM/YYYY)*</span></label>
                             <div class="form-group">
                                 <div id="dvStartDate" class="col-md-6 date datealign">
                                     <div class="input-group input-append date">
@@ -149,7 +151,7 @@
                             </div>
                         </div>
                         <div class="col-md-6">
-                            <label>End Date<span class="text-danger lb-sm">(DD/MM/YYYY)*</span></label>
+                            <label>End Date<span class="text-danger lb-sm"> (DD/MM/YYYY)*</span></label>
                             <div class="form-group">
                                 <div id="dvEndDate" class="col-md-6 form-group date datealign">
                                     <div class="input-group input-append date">
