--- a/MRM/Views/Shared/_Layout.cshtml
+++ b/MRM/Views/Shared/_Layout.cshtml
@@ -325,4 +325,22 @@
         overflow: auto !important;
         max-height: 80px;
     }
+
+    legend {
+        width:inherit; /* Or auto */
+        padding:0 10px; /* To give a bit of padding on the left and right */
+        border-bottom:none;
+    }
+    fieldset {
+        position: relative;
+    }
+
+    .legend2 {
+        position: absolute;
+        top: -0.2em;
+        right: 20px;
+        background: #fff;
+        line-height:1.2em;
+        font-size: x-small;
+    }
 </style>
