Fixed UI issues for Demo and other issues

--- a/MRM/Views/ChildCampaign/ChildCampaignForm.cshtml
+++ b/MRM/Views/ChildCampaign/ChildCampaignForm.cshtml
@@ -21,8 +21,10 @@
                 <!-- /.box-header -->
                 <div class="box-body">
                     <fieldset>
-                        <legend class="header-color">Sub Campaign<span class="text-danger" style="float:right;font-size:x-small">Note: Mandatory fields is marked with red aestric (*)</span></legend>
-
+                    <legend class="header-color">Sub Campaign
+                        @*<span class="text-danger" style="float:right;font-size:x-small">Note: Mandatory fields is marked with red aestric (*)</span>*@
+                    </legend>
+                    <div class="legend2 text-danger">Note: Mandatory fields is marked with red aestric (*)</div>
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="form-group">
