--- a/MRM/Views/TacticCampaign/TacticCampaignForm.cshtml
+++ b/MRM/Views/TacticCampaign/TacticCampaignForm.cshtml
@@ -23,7 +23,9 @@
             <div class="box-body">
                 <div class="row">
                     <fieldset>
-                        <legend class="header-color">Tactic<span class="text-danger" style="float:right;font-size:x-small">Note: Mandatory fields is marked with red aestric (*)</span></legend>
+                    <legend class="header-color">Tactic
+                    </legend>
+                    <div class="legend2 text-danger">Note: Mandatory fields is marked with red aestric (*)</div>
 
                         <div class="row">
                             <div class="col-md-6">
@@ -210,11 +212,11 @@
                         </div>
 
                         <div class="row">
-                            <div class="col-md-6">
-                                <label class="pull-right">Benchmark</label>
+                            <div class="col-md-8">
+                                <label class="pull-right" style="padding-right:25px">Benchmark</label>
                             </div>
-                            <div class="col-md-6">
-                                <span class="text-danger">(At least one Reach and Response row is mandatory on submit)*</span>
+                            <div class="col-md-4">
+                                <span class="text-danger" style="font-size:smaller;">(At least one Reach and Response row is mandatory on submit)*</span>
                             </div>
                         </div>
                         <div class="row">
