bug fixed raised by jitendra and enhacement of UI raised by Pavithra (Faizan )

--- a/MRM/Views/TacticCampaign/TacticCampaignForm.cshtml
+++ b/MRM/Views/TacticCampaign/TacticCampaignForm.cshtml
@@ -212,12 +212,11 @@
                         </div>
 
                         <div class="row">
-                            <div class="col-md-8">
-                                <label class="pull-right" style="padding-right:25px">Benchmark</label>
-                            </div>
-                            <div class="col-md-4">
-                                <span class="text-danger" style="font-size:smaller;">(At least one Reach and Response row is mandatory on submit)*</span>
-                            </div>
+                            <div class="col-md-12">
+                                <label style="float:right!important;padding-right:77px">Benchmark
+                                <span class="text-danger" style="font-size:smaller">   (At least one Reach and Response row is mandatory on submit)*</span>
+                                </label>
+                                </div>
                         </div>
                         <div class="row">
                             <div class="col-md-9" style="margin-left: 130px;margin-right: 150px">
